--- a/vue1/vue-ele-app/src/common/stylus/base.styl
+++ b/vue1/vue-ele-app/src/common/stylus/base.styl
@@ -3,7 +3,7 @@
   padding 0
 body, html
   line-height 1
-  font-size 200
+  font-weight 200
   font-family 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif
 
 ul
@@ -23,9 +23,9 @@ ul
 @media (min-device-pixel-ratio: 1.5)
   .border-1px
     &::after
-      transform: scaleY(0.7)
+      transform scaleY(0.7)
 
 @media (min-device-pixel-ratio: 2)
   .border-1px
     &::after
-      transform: scaleY(0.5)
+      transform scaleY(0.5)
