--- a/wxapp/仿网易云/pages/music/music.wxml
+++ b/wxapp/仿网易云/pages/music/music.wxml
@@ -1,21 +1,34 @@
 <view class="music" >
-    
+    <view class="background">
+    <image class="" src="{{playsongs[(current+playsongs.length)%playsongs.length].al.picUrl}}" mode="scaleToFill" />
+    <view class="mask"></view>
+  </view>
     <view class="title">
         <view class="music-name">
             {{playsongs[(current+playsongs.length)%playsongs.length].name}}
         </view>
         <view class="music-author">
-            {{playsongs[(current+playsongs.length)%playsongs.length].artists[0].name||playsongs[(current+playsongs.length)%playsongs.length].ar[0].name}}
+            {{playsongs[(current+playsongs.length)%playsongs.length].ar[0].name}}
         </view>
     </view>
-    <view class="cicrle">
+   <view class="circle-wrapper">
+        <view class="cicrle" >
         <view class="big-circle"></view>
-        <view class="small-circle">
-            <image class="" src="{{playsongs[(current+playsongs.length)%playsongs.length].artists[0].img1v1Url||playsongs[(current+playsongs.length)%playsongs.length].al.picUrl}}" />
+        <view class="small-circle rotate" style="animation-play-state: {{isPlay ? 'running' : 'paused'}}"  >
+            <image class="" src="{{playsongs[(current+playsongs.length)%playsongs.length].al.picUrl}}" />
         </view>
     </view >
+   </view>
+    
     <view class="progress">
-        <view class="start-time">{{currentTime}}</view>
+         <view class="start-time">{{currentTime}}</view>
+        <movable-area class="movable-area" scale-area="false">
+            <movable-view class="movable-view" direction="none" inertia="false" out-of-bounds="false" x="" y="" damping="20"
+                friction="2" disabled="false" scale="false" scale-min="0.5" scale-max="10" scale-value="1"
+                animation="true" bindchange="" bindscale="">
+               
+        
+          
         <view class="progress-bar"  bindtouchstart="touchstart" bindtouchmove="touchmove" bindtouchend="touchend">
             <view class="progress-bar-end">
             
@@ -28,6 +41,10 @@
             </view>
               
         </view>
+        
+            </movable-view>
+              
+        </movable-area>
         <view class="end-time">{{duration}}</view>
     </view>
     <view class="contral">
@@ -56,18 +73,16 @@
 <view class="bg" hidden="{{!isShow}}" bindtap="HiddenList">
       
             <view class="wrapper">
+                <view class="height">
+                    <view class="song-title">播放列表</view>
+                </view>
                 <view class="scrollHeight">
                     <scroll-view class="scrollHeight" scroll-x="false" scroll-y="true">
-                        <view class="height">
-                            <view class="song-title">播放列表</view>
                             <view class="songList" wx:for="{{playsongs}}" wx:key="{{index}}">
                                 <view class="songList-item"  catchtap="playCurrentSong" data-id="{{index}}"  bindtap="HiddenList">
-                                    {{item.name}}-{{item.artists[0].name||item.ar[0].name}}
-                                    
+                                    {{item.name}}-{{item.artists[0].name||item.ar[0].name}}            
                                 </view>
-                            </view>
-                        
-                        </view>
+                            </view>  
                     </scroll-view>
                 </view>
                   
