--- a/wxapp/仿网易云/pages/singsheet/singsheet.wxss
+++ b/wxapp/仿网易云/pages/singsheet/singsheet.wxss
@@ -1,29 +1,56 @@
 /* pages/singsheet/singsheet.wxss */
 
-.header{
-    background-color: #565989;
+.header {}
+
+.background {
+    position: fixed;
+    left: 0;
+    right: 0;
+    height: 380rpx;
+    z-index: -1;
 }
-.title{
+
+.background image {
+    width: 100vw;
+    height: 390rpx;
+    filter: blur(30px);
+}
+
+
+/* .mask {
+    position: absolute;
+    left: 0;
+    height: 380rpx;
+    right: 0;
+    background-color: #000;
+    opacity: .4;
+} */
+
+.title {
     height: 70rpx;
     line-height: 70rpx;
     text-align: center;
     color: #fff;
     font-size: 28rpx;
 }
-.container{
+
+.container {
     display: flex;
     justify-content: space-between;
- 
 }
-.img{
+
+.img {
     margin: 40rpx 30rpx;
 }
-.img image{
+
+.img image {
     width: 220rpx;
     height: 220rpx;
     border-radius: 10rpx;
 }
-.big-title,.introduce{
+
+.big-title,
+.introduce {
     font-size: 32rpx;
     color: #fff;
     overflow: hidden;
@@ -35,12 +62,14 @@
     line-height: 40rpx;
     margin-bottom: 10rpx;
 }
-.avatar image{
+
+.avatar image {
     width: 50rpx;
     height: 50rpx;
     border-radius: 50%;
 }
-.nickname{
+
+.nickname {
     line-height: 50rpx;
     height: 50rpx;
     font-size: 28rpx;
@@ -50,20 +79,29 @@
     overflow: hidden;
     white-space: nowrap;
 }
-.text{
+
+.text {
     margin: 40rpx 30rpx;
 }
-.user{height: 50rpx;
-margin-bottom: 20rpx;
-display: flex;}
-.introduce{font-size: 24rpx;
-height: 60rpx;
-line-height: 30rpx;}
-.search-box{
+
+.user {
+    height: 50rpx;
+    margin-bottom: 20rpx;
+    display: flex;
+}
+
+.introduce {
+    font-size: 24rpx;
+    height: 60rpx;
+    line-height: 30rpx;
+}
+
+.search-box {
     margin: 0 20rpx;
     border-color: rgb(250, 250, 250);
 }
-.song-name{
+
+.song-name {
     font-size: 32rpx;
     height: 40rpx;
     line-height: 40rpx;
@@ -71,37 +109,44 @@ line-height: 30rpx;}
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-.author{
+
+.author {
     font-size: 24rpx;
     margin-bottom: 50rpx;
     color: #9B9B9B;
     margin-top: 10rpx;
 }
-.scroll{
+
+.scroll {
     position: absolute;
     top: 380rpx;
     bottom: 0;
 }
-.song-item{
+
+.song-item {
     margin-top: 40rpx;
     display: flex;
     justify-content: space-between;
 }
-.icon image{
+
+.icon image {
     height: 50rpx;
     width: 50rpx;
 }
-.icon{
+
+.icon {
     width: 100rpx;
     height: 100rpx;
 }
-.song-list{
+
+.song-list {
     width: 70vw;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-.loading{
+
+.loading {
     width: 60rpx;
     margin: 0 auto;
 }
