--- a/wxapp/仿网易云/pages/index/search/search.wxss
+++ b/wxapp/仿网易云/pages/index/search/search.wxss
@@ -48,6 +48,7 @@
     border-color: rgb(250, 250, 250);
     width: 100vw;
     margin-right: 40rpx;
+    height: 440rpx;
 }
 
 .history-title .text,
@@ -77,7 +78,7 @@
 
 .history-scroll {
     position: absolute;
-    top: 590rpx;
+    top: 670rpx;
     bottom: 100rpx;
     left: 0;
     right: 0;
